--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b4fe8a">  <td>23/07/10 02:04:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UploadFile.upload()[pri:0, instance:uploadanddownloadfile.UploadFile@2ed2d9cb]">upload</td> 
-  <td>main@151593342</td>   <td></td> </tr>
+<tr bgcolor="b4fe8a">  <td>23/07/19 22:50:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreatUpdatGet.create()[pri:1, instance:spotifyapiautomation.CreatUpdatGet@43dac38f]">create</td> 
+  <td>main@657736958</td>   <td></td> </tr>
+<tr bgcolor="b4fe8a">  <td>23/07/19 22:50:04</td>   <td>3070</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreatUpdatGet.get()[pri:2, instance:spotifyapiautomation.CreatUpdatGet@43dac38f]">get</td> 
+  <td>main@657736958</td>   <td></td> </tr>
+<tr bgcolor="b4fe8a">  <td>23/07/19 22:50:04</td>   <td>3477</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreatUpdatGet.update()[pri:3, instance:spotifyapiautomation.CreatUpdatGet@43dac38f]">update</td> 
+  <td>main@657736958</td>   <td></td> </tr>
 </table>
